[package]
name = "job_scheduler"
version = "1.0.0"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "A simple cron-like job scheduling library for Rust."

documentation = "https://docs.rs/job_scheduler/"
repository = "https://github.com/lholden/job_scheduler"

license-file = "LICENSE"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job"]

categories = ["date-and-time"]

[dependencies]
cron = "~0.2"
chrono = "~0.3"
