[package]
name = "job_scheduler"
version = "1.0.6"
authors = ["Lori Holden <noreply@loriholden.com>"]
description = "A simple cron-like job scheduling library for Rust."

documentation = "https://docs.rs/job_scheduler/"
repository = "https://github.com/lholden/job_scheduler"

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job"]

categories = ["date-and-time"]

[dependencies]
cron = "~0.6"
chrono = "~0.4"
uuid = { version = "0.8", features = ["v4"] }
